--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="button" class="button" value="Translate" placeholder="" onclick="t()">
       <input type="button" class="button" value="Decode" onclick="decode()">
       <audio src="https://ubily.sumeran.xyz/ugchat/gd/music/Deadlocked.mp3" controls autoplay class="no"></audio>
-      <h3>ham</h3>
+      <h3 id="hi">ham</h3>
   </div>
     <script src="main.js"></script>
 </body>
